Initialize project structure with ESLint and TypeScript configuration, add solution templates, and implement utility modules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "stdlib.h": "c",
-        "lib.h": "c"
+        "lib.h": "c",
+        "dynamic_array.h": "c"
     }
 }
